Update and rename CircleArea.html to RectangleArea.html

--- a/RectangleArea.html
+++ b/RectangleArea.html
@@ -5,7 +5,7 @@
 <h1>The area of a Rectangle </h1>
 
 
-<form align="center" action="CircleArea2.php" method="post">
+<form align="center" action="RectangleArea2.php" method="post">
   Length:
   <input name="Length" type="number">
   <br><br>
